1: Tested the different test cases in the android and resolved issues.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -972,7 +972,7 @@
     <string name="amount_credited_to">Amount credited to</string>
     <string name="redeemed_amount">Redeemed amount</string>
     <string name="insta_redeem_is_not_availble">Insta-Redemption is not available for this folio now.</string>
-    <string name="do_you_want_to_enable_app_security">Do you want to enable the screen lock for the app security?</string>
+    <string name="do_you_want_to_enable_app_security">Do you want to enable screen lock?</string>
     <string name="debit_cart_request_sent">We have received your request for a debit card.</string>
     <string name="success_">Success!</string>
     <string name="to_be_confirmed">To be confirmed</string>
