1: Implement the pop-up for the addition in the folio in Tarrakki Zyaada and test the addition in folio for the Tarrakki Zyaada & fund details. 2: Implement the changes in the fund details screen to display the expense ratio & move the risk level below the top 10 holdings. 3: Implement the change in the raise ticket UI to provide the option to upload the file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -988,5 +988,7 @@
     <string name="failed_transaction_msg">Unfortunately, your transactions have failed. Please try again.</string>
     <string name="your_purchase_request_has_been_received">Your purchase request has been received.</string>
     <string name="do_you_want_to_raise_the_ticket_for_the_transaction">Do you want to raise the ticket for the transaction?</string>
+    <string name="overview">Overview</string>
+    <string name="performance">Performance</string>
     <!--<string name="select_country">Select Country</string>-->
 </resources>
