--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">tarrakki</string>
+    <string name="app_name">Tarrakki</string>
 
     <!--Facebook Details-->
     <string name="facebook_app_id">387985278434317</string>
@@ -990,5 +990,6 @@
     <string name="do_you_want_to_raise_the_ticket_for_the_transaction">Do you want to raise the ticket for the transaction?</string>
     <string name="overview">Overview</string>
     <string name="performance">Performance</string>
+    <string name="close">Close</string>
     <!--<string name="select_country">Select Country</string>-->
 </resources>
