--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -993,5 +993,6 @@
     <string name="performance">Performance</string>
     <string name="close">Close</string>
     <string name="file">File</string>
+    <string name="tap_to_explore_all_mutual_funds">Tap To Explore All Mutual Funds</string>
     <!--<string name="select_country">Select Country</string>-->
 </resources>
