--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -317,7 +317,7 @@
     <string name="sip_duration">SIP Duration</string>
     <string name="enter_sip_duration">Enter SIP duration</string>
     <string name="apply_pmt">Invest Now</string>
-    <string name="nav_on">NAV on</string>
+    <string name="nav_on">NAV as on</string>
 
 
     <string name="req_change_password">All the fields are mandatory so please enter the required fields first to change the password.</string>
